# wadext

./: .gitignore  CMakeLists.txt  README.md  convert.cpp  file_rff.cpp  fileformat.cpp  fileformat.h  main.cpp  resourcefile.h  tarray.h  wadext.cpp  wadext.h  wadfile.cpp  wadman.h
.github/workflows/: continuous_integration.yml
zlib/: CMakeLists.txt
